# src/servers/http/api/controllers/index.ts
@@ -1,3 +1,4 @@
 import './swagger';
 import './healthcheck';
+import './location';
 import './person';
